feat: add ChecklistEntry to Checklist domain and update all affected classes