@@ -10,14 +10,24 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
 
 public class ChecklistTest {
+
     private Shift buildShift(){
 Zone zone = new Zone(1L,"Zone 1");
-Address address = new Address("Musterstraße 1","Bielefeld","33649");
+
 Driver driver = new Driver(1L,"Max","Mustermann");
 return new Shift(1L,driver,zone, LocalDate.of(2026,3,15),
         LocalTime.of(19,0),LocalTime.of(6,0));
     }
     Shift shift = buildShift();
+    private final Address address = new Address("Musterstraße 1","Bielefeld","33649");
+    private final StandardConfiguration config = new StandardConfiguration.Builder()
+            .inspectionCount(2)
+            .build();
+    private final SecurityObject securityObject = new SecurityObject(
+            1L, "Object A", shift.getZone(), address, config);
+    private final ChecklistEntry entry = new ChecklistEntry(securityObject, config);
+    private final Checklist checklist = new Checklist(1L, shift, config,
+            LocalDateTime.now(), List.of(), List.of(entry));
     List<Warning> warningList = List.of(new Warning("Warning"));
     @Test
     void shouldCreateAChecklistAsSnap(){
@@ -25,7 +35,7 @@ return new Shift(1L,driver,zone, LocalDate.of(2026,3,15),
         StandardConfiguration config = new StandardConfiguration.Builder()
                 .inspectionCount(2)
                 .build();
-        Checklist checklist = new Checklist(1L,shift,config,LocalDateTime.now(),warningList);
+        Checklist checklist = new Checklist(1L,shift,config,LocalDateTime.now(),warningList,List.of(entry));
         assertThat(checklist.getId()).isEqualTo(1L);
         assertThat(checklist.getShift()).isEqualTo(shift);
         assertThat(checklist.getConfiguration()).isEqualTo(config);
@@ -34,47 +44,42 @@ return new Shift(1L,driver,zone, LocalDate.of(2026,3,15),
     @Test
     void shouldThrowExceptionWhenShiftIsNull() {
         assertThatThrownBy(() -> new Checklist(1L, null,
-                new StandardConfiguration.Builder().build(), LocalDateTime.now(),warningList))
+                new StandardConfiguration.Builder().build(), LocalDateTime.now(),warningList,List.of(entry)))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("Checklist shift must not be null");
     }
     @Test
     void shouldThrowExceptionWhenConfigIsNull() {
         assertThatThrownBy(() -> new Checklist(1L, shift,
-                null, LocalDateTime.now(),warningList))
+                null, LocalDateTime.now(),warningList,List.of(entry)))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("Checklist configuration must not be null");
     }
     @Test
     void shouldThrowExceptionWhenGeneratedAtIsNull() {
         assertThatThrownBy(() -> new Checklist(1L, shift,
-                new StandardConfiguration.Builder().build(), null,warningList))
+                new StandardConfiguration.Builder().build(), null,warningList,List.of(entry)))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("Checklist generatedAt must not be null");
     }
     @Test
     void shouldThrowExceptionWhenWarningsIsNull() {
         assertThatThrownBy(() -> new Checklist(1L, shift,
-                new StandardConfiguration.Builder().build(), LocalDateTime.now(),null))
+                new StandardConfiguration.Builder().build(), LocalDateTime.now(),null,List.of(entry)))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("Checklist warnings must not be null");
     }
     @Test
+    void shouldThrowExceptionWhenEntriesIsNull() {
+        assertThatThrownBy(() -> new Checklist(1L, shift,
+                new StandardConfiguration.Builder().build(), LocalDateTime.now(),warningList,null))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Checklist entries must not be null");
+    }
+    @Test
     void shouldCreateChecklistWithEntries(){
-        Zone zone = new Zone(1L,"Zone 1");
-        Address address = new Address("Musterstraße 1","Bielefeld","33649");
-        Driver driver = new Driver(1L,"Max","Mustermann");
-        Shift shift = buildShift();
-        StandardConfiguration config = new StandardConfiguration.Builder()
-                .inspectionCount(2)
-                .build();
-        SecurityObject securityObject = new SecurityObject(
-                1L, "Object A", zone, address, config);
-        ChecklistEntry entry = new ChecklistEntry(securityObject, config);
-        Checklist checklist = new Checklist(1L, shift, config,
-                LocalDateTime.now(), List.of(), List.of(entry));
         assertThat(checklist.getEntries()).hasSize(1);
-        assertThat(checklist.getEntries().get(0).getSecurityObject().getName())
+        assertThat(checklist.getEntries().getFirst().getSecurityObject().getName())
                 .isEqualTo("Object A");
 
     }
